Post memoir, update about

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -42,7 +42,7 @@
 		
 		<div>
 			<h1>About</h1>
-			<div><p>Boston, MA grown and raised. Some GMOs. A few frills. Big belief in mushrooms, wondrous depths, human culture, multimodal thought, sheer sheer inner power.</p>
+			<div><p>Boston, MA grown and raised in apartmental climates. Some GMOs. A few frills. Big belief in mushrooms, considerate landlords, and the multimodal transport of people, goods, and culture. Big fan of my family and friends 💜.</p>
 <p>Currently residing: Los Angeles, CA.</p>
 <figure>
     <img src="../images/about-profile.jpg"
