--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,19 @@
 		
 		
 			<article>
+	<h1><a href="http://khatnaps.net/posts/memoir/">Memoir</a></h1>
+	<b><time>11-20-2018</time></b>
+	
+	<div>
+		<p>Floundering at 20. Memory, adolescence, and the relationships daughters and mothers can grow to share. My hippocampus in a jar of acid.</p>
+<p><a href="posts/memoir#abstract">I. Abstract</a> <a href="posts/memoir#semicircular-canal">II. Semicircular canal</a> <a href="posts/memoir#arms-as-wings">III. Arms as wings</a> <a href="posts/memoir#minds-eye">IV. Mind&rsquo;s eye</a> <a href="posts/memoir#esophagus">V. Esophagus</a> <a href="posts/memoir#cotton-mouth">VI. Cotton mouth</a> <a href="posts/memoir#heart">VII. Heart</a></p>
+
+		
+	</div>
+</article>
+
+		
+			<article>
 	<h1><a href="http://khatnaps.net/posts/a-luddite-snapchats/">A luddite snapchats</a></h1>
 	<b><time>03-15-2017</time></b>
 	
