Add nose boop series page

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -28,7 +28,9 @@
 			
 			<a class='bars' href="/about/"><b>About</b></a>.
 			
-			<a class='bars' href="/reading-list/"><b>Reading list</b></a>.
+			<a class='bars' href="/series/nose-boop/"><b>Big sale</b></a>.
+			
+			<a class='bars' href="/reading-list/"><b>Reads</b></a>.
 			
 			<a class='bars' href="/goodies/"><b>◐</b></a>.
 			
@@ -55,7 +57,11 @@
 		
 		
 		<ul>
-		    
+
+			
+				
+			
+
 		</ul>
 		<div class="pagination">
 
